<resources>
    <string name="label_update_msg">Nosso aplicativo está com uma nova versão e você deve atualizá-lo para continuar aproveitando suas vantagens.</string>
    <string name="label_download_msg">Baixe agora a nova versão pressionando o botão abaixo.</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="menu_action">Menu</string>
    <string name="notification_action">Notificações</string>
    <string name="page_store_information">INFORMAÇÕES</string>
    <string name="page_store_storefront">VITRINE</string>
    <string name="page_store_mobis">SEUS PONTOS</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="menu_title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="menu_title_home">Início</string>
    <string name="outdated_update_label">Atualizar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_email_address">Email</string>
    <string name="label_password">Senha</string>
    <string name="signin_email_label">Login com email</string>
    <string name="message_signing_in">Entrando…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="message_bad_credentials">Usuário ou senha incorretos</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="signin_advert_message">Fique tranquilo! Não realizamos postagens em seu nome sem a sua permissão.</string>
    <string name="signin_email_lost_password_label">Esqueci minha senha</string>
    <string name="signin_email_signup_label">Criar conta</string>
    <string name="signin_facebook_label">Login com Facebook</string>
    <string name="signin_email_login_label">Faça login para continuar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_offline_no_connection_label">A internet não responde!</string>
    <string name="home_offline_label_no_connection_message">A sua conexão caiu ou esta desligada. Ative o WI-FI ou a sua rede de dados para conectar a internet.</string>
    <string name="qrcode_label_qrcode_message">Peça o QRCode ao atendente e posicione o código na área marcada para pontuar. </string>
    <string name="qrcode_label_no_connection_status">Você está offline</string>
    <string name="dialog_gain_mobi_online_label_total_mobis">Você ganhou %1$s pontos!</string>
    <string name="qrcode_success_label_congrat_user">Parabéns, %1$s!</string>
    <string name="qrcode_result_label_congrat_user_message">Continue acumulando pontos e aproveitando as recompensas!</string>
    <string name="qrcode_result_label_mode">Modo Offline</string>
    <string name="qrcode_result_label_mode_message1">É necessário ter conexão com a internet para seus pontos serem computados em nosso sistema.</string>
    <string name="qrcode_result_label_mode_message2">Mas não se preocupe, nós os salvamos e enviamos para o sistema quando uma conexão estiver disponível.</string>
    <string name="store_information_label_position">Você está há %1$s desta loja</string>
    <string name="store_information_label_mobis_access">Veja seu extrato de pontos em \"Seus Pontos\"</string>
    <string name="store_information_label_how_to_win">COMO GANHAR</string>
    <string name="label_store_front_choose_message">Escolha qual produto comprar com seus pontos</string>
    <string name="no_store_rewards">Nenhuma recompensa</string>
    <string name="no_establishments">Nenhum estabelecimento</string>
    <string name="store_front_label_reward_price">%1$s pontos</string>
    <string name="store_user_mobis_label_mobis_to_expire">PONTOS A EXPIRAR</string>
    <string name="store_user_mobis_label_mobis_to_expire_message">
            <![CDATA[
        <p>Em %1$s %2$s pontos irão expirar</p>
        ]]></string>
    <string name="store_user_mobis_label_mobis_extract">EXTRATO</string>
    <string name="store_user_mobis_label_expiring_legend">Legenda:</string>
    <string name="no_store_user_mobis_extracts">Nenhum ponto</string>
    <string name="signin_hint_email">Email</string>
    <string name="signin_hint_password">Senha</string>
    <string name="signup_btn_label_signup">Criar conta</string>
    <string name="signup_hint_name">Nome</string>
    <string name="signup_hint_lastname">Sobrenome</string>
    <string name="signun_hint_confirm_password">Senha de novo</string>
    <string name="signup_hint_birth_Date">Nascimento</string>
    <string name="signup_label_use_terms">Termos de Uso</string>
    <string name="signup_label_privacy_policy">Política de Privacidade</string>
    <string name="signup_label_signup_privacy_message">Cadastrando-se, você afirma concordar com os nossos Termos de Uso e Política de Privacidade.</string>
    <string name="lost_password_label_message1">Não tem problema. Digite o email cadastrado que enviamos um link para você cria uma nova senha.</string>
    <string name="lost_password_label_message2">Excluiu sua conta no facebook?</string>
    <string name="lost_password_label_message3">Digite o email que estava cadastrado.</string>
    <string name="lost_password_btn_change_password">Redefinir senha</string>
    <string-array name="gender_values">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Sexo</item>
    </string-array>
    <string-array name="gender_values_for_editing">
        <item>Sexo</item>
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="loading_stuffs">
        <item>Ligando a cafeteira...</item>
        <item>Preparando o café...</item>
        <item>Olhando o cardápio...</item>
        <item>Preparando outro café...</item>
        <item>Colocando o cuscuz no fogo...</item>
        <item>Opa, saindo uma tapioca...</item>
        <item>Partindo o queijo...</item>
        <item>Saindo um cappuccino...</item>
    </string-array>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_qrcode_result_dialog">QRCodeResultDialog</string>
    <string name="title_activity_lost_password">Esqueci minha senha</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_signup">Cadastro</string>
    <string name="title_activity_store">Loja</string>
    <string name="title_activity_home">Início</string>
    <string name="title_activity_reward">Recompensas</string>
    <string name="title_activity_reward_detail">Recompensa</string>
    <string name="title_activity_gain_mobi">GainMobiActivity</string>
    <string name="title_activity_rescue_reward">Resgatar recompensa</string>
    <string name="title_activity_cardapio">Cardápio</string>
    <string name="outdated_label_user_welcome">Oi %1$s, tudo bem?</string>
    <string name="outdated_label_user_welcome2">Tudo bem?</string>
    <string name="account_blocked_label_reason">Nossos computadores detectaram atividades suspeitas no uso do aplicativo.</string>
    <string name="account_blocked_label_user_message">%1$s, sua conta foi bloqueada.</string>
    <string name="account_blocked_label_user_message2">Sua conta foi bloqueada.</string>
    <string name="account_blocked_button_central">Central de Relacionamento</string>
    <string name="reward_label_user_owned">O QUE VOCÊ TEM</string>
    <string name="menu_title_rewards">Recompensas</string>
    <string name="user_rewards_label_user_expired">RECOMPENSAS QUE EXPIRARAM</string>
    <string name="user_reward_label_user_rescued">RECOMPENSAS QUE JÁ FORAM RESGATADAS</string>
    <string name="rescue_reward_label_rescue_message">Você está preste a resgatar:</string>
    <string name="reward_rescue_label_reward_rescued">Recompensa resgatada!</string>
    <string name="reward_rescue_label_user_attention">Atenção!</string>
    <string name="rescue_reward_label_time_message">Anote estas informações sobre o resgate, pois podem ser úteis futuramente.</string>
    <string name="reward_rescue_error_label_ops">Opa!</string>
    <string name="reward_rescue_error_label_ops_message">Ocorreu um error ao tentar resgatar sua recompensa.</string>
    <string name="reward_rescue_error_label_error">Erro:</string>
    <string name="app_name">Quanto Prima</string>
    <string name="store_reward_alert_dialog_message_success">Compra feita com sucesso. Deseja ir para recompensas?</string>
    <string name="alert_dialog_title_success">Sucesso</string>
    <string name="alert_yes">Sim</string>
    <string name="alert_no">Não</string>
    <string name="service_comunication_error">Você está sem conexão com a internet. Tente novamente quando estiver online.</string>
    <string name="error_unknown">Desconhecido</string>
    <string name="home_gain_mobi_invalid_qr_code">QR Code inválido</string>
    <string name="wifi_connected">Conectado pela Wi-Fi</string>
    <string name="mobile_connected">Conectado pelo 3G</string>
    <string name="no_connection">Sem conexão. Ative WiFi ou 3G.</string>
    <string name="title_activity_mobis_offline">Pontos Offline</string>
    <string name="loading_message">Carregando...</string>
    <string name="cardapio_cardapio_no_cardapio">Nenhum cardápio</string>
    <string name="cardapio_cardapio_no_cardapio_item">Nenhum item no cardápio</string>
    <string name="mobi_sync_gain_mobi">Parabéns! Você ganhou 10 pontos.</string>
    <string name="title_activity_notifications">Notificações</string>
    <string name="home_offline_label_gain_mobis_message">Mas fique tranquilo. Você ainda pode ganhar pontos, mesmo offline. Atualizaremos quando você conectar.</string>
    <string name="gain_mobi_label_share">Aproveite para:</string>
    <string name="gain_mobi_btn_facebook_share">Compartilhar a novidade</string>
    <string name="label_user">Desconhecido</string>
    <string name="menu_item_reward">Minhas Recompensas</string>
    <string name="menu_item_ajuda">Ajuda</string>
    <string name="menu_item_contact">Central de Relacionamento</string>
    <string name="menu_item_about">Quanto Prima</string>
    <string name="dialog_gain_mobi_label_completed_card_message">E já pode trocar seus pontos por uma recompensa.</string>
    <string name="dialog_gain_mobi_completed_card_final_message">Você chegou até aqui e merece ser recompensado. Aproveite!</string>
    <string name="dialog_gain_mobi_online_button_store_evaluate">Avaliar loja</string>
    <string name="dialog_gain_mobi_completed_card_btn_choose_reward">Escolher prêmio na vitrine</string>
    <string name="menu_item_logout">Sair da conta</string>
    <string name="menu_item_tutorial">Tutorial</string>
    <string name="menu_item_terms_privacy">Termos e Política</string>
    <string name="menu_item_about_mobiclub">Sobre o aplicativo</string>
</resources>