<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.mobiclub.quantoprima.ui.activity.GainMobiResultDialog">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_close"
        style="@style/DialogCloseButton"
        android:src="@drawable/fechar"
        android:layout_marginRight="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/GainMobiMessagesContainer">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/image_close"
            android:background="@drawable/shape_bg_orange">

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:text="@string/dialog_gain_mobi_online_label_total_mobis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_total_mobis"
                style="@style/ButtonText.GainMobiTotalMobis" />

            <TextView
                android:text="@string/dialog_gain_mobi_online_label_total_mobis"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/labelOff"
                android:maxLines="1"
                style="@style/ButtonText.GainMobiTotalMobis"
                android:visibility="gone"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_emotion_icon"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/relativeLayout"
            android:id="@+id/lyt_price"
            android:background="@drawable/t06_1_leitura_divmsgoffline"
            style="@style/DialogMessagePadding">

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_success_label_congrat_user"
                android:id="@+id/label_congrat_user"
                android:layout_gravity="center_horizontal"
                android:textSize="19sp"
                style="@style/TextBold"
                android:textColor="@color/text_principal2"
                android:paddingBottom="3dp"
                android:layout_weight="1" />

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_result_label_congrat_user_message"
                android:id="@+id/label_congrat_user_message"
                android:textColor="@color/text_principal2"
                android:textSize="14sp"
                style="@style/TextMedium"
                android:gravity="center_horizontal"
                android:paddingLeft="23dp"
                android:paddingRight="23dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_price"
            android:background="@drawable/t06_1_leitura_divmsgoffline"
            style="@style/DialogMessagePadding">

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextBold"
                android:text="@string/qrcode_result_label_mode"
                android:id="@+id/label_mode"
                android:layout_gravity="center_horizontal"
                android:textSize="19sp"
                android:textColor="@color/text_principal2"
                android:layout_weight="1"
                android:paddingBottom="3dp" />

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_result_label_mode_message1"
                android:id="@+id/label_mode_success"
                style="@style/TextMedium"
                android:textColor="@color/text_principal2"
                android:textSize="14sp"
                android:layout_weight="1"
                android:gravity="center" />

            <br.com.mobiclub.quantoprima.ui.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_result_label_mode_message2"
                android:id="@+id/label_mode_success2"
                style="@style/TextMedium"
                android:textColor="@color/text_principal2"
                android:textSize="14sp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
